--- a/packages/catalog-model/examples/components/artist-lookup-component.yaml
+++ b/packages/catalog-model/examples/components/artist-lookup-component.yaml
@@ -2,9 +2,9 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: artist-lookup
-  description: Artist Lookup
+  description: Artist Lookup by MP
   tags:
-    - java
+    - python
     - data
   links:
     - url: https://example.com/user
